# eafix-modular

./: .aider.chat.history.md  .coveragerc  .env.example  .gitattributes  .gitignore  .gitmessage.txt  .markdownlint.yaml  .markdownlint.yml  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yml  0099900001260118_.aider.input.history  0099900002260118_.coverage  0099900003260118_.gitignore  0099900006260118_Makefile  0099900008260118_pyproject.toml  0099900009260118_tasks.bat  0199900001260118_Economic Calendar Integration Framework.md  0199900002260119_economic Calendar Trading System Documentation.md  0199900003260119_HUEY_P_EA_ExecutionEngine_8.md  0199900006260118_Economic Calendar Strategy ID Generation.md  0199900008260118_economic_calendar_analysis.md  0199900009260118_FILE_SCANNER_ENHANCEMENTS.md  0199900011260118_Generic_Unified Filename Identity Framework.md  0199900013260118_PLUGIN_MIGRATION_GUIDE.md  0299900001260118_CURRENT_huey_p_tactical_spec.txt  0299900005260118_enhanced_config_files.txt  1299900001260118_.markdownlint.yaml  1299900002260118_.pre-commit-config.yaml  2099900005260118_eafix_cli.py  2099900006260118_eafix_plugin_main.py  2099900007260118_enhanced_calendar_system.py  AGENTS.md  AGENT_FILE_DROP_README.md  ALVT_IMPLEMENTATION_COMPLETE.md  ALVT_SYSTEM_DOCUMENTATION.yaml  Agentic_CLI_Tools_Overview.md  Agentic_CLI_Tools_Overview_v1_to_v2.diff  CLAUDE.md  CLAUDE.md.backup  (+110 more)
.aider.tags.cache.v4/: 0099900011260118_cache.db-shm  0099900012260118_cache.db-wal  cache.db
.claude/: 1199900001260118_settings.local.json  settings.local.json
.devcontainer/: devcontainer.json
.gemini/: GEMINI.md
.githooks/: pre-push
.github/: 0099900013260118_CODEOWNERS  0199900017260118_CONTRIBUTING.md  0199900018260118_SECURITY.md  1299900004260118_dependabot.yml  CODEOWNERS  CONTRIBUTING.md  SECURITY.md  budget_alerts.yml  dependabot.yml  labeler.yml
.pre-commit-hooks/: 2026012201113009_validate-mapping.ps1
.state/: final_status.json
CLI_PY_GUI/: Python GUI Development Report_.md
CLI_PY_GUI/gui_terminal/: CLIUPDATES9.json  CODEX_IMPLEMENTATION_PLAN.md  README.md  cli visual shell to a Python GUI.md  cli visual shell to a Python GUI2.md  cli_gui_terminal.py  comprehensive_testing_suite.py  deployment_guide.md  enhanced_pty_terminal.py  gui_pty_parity_patchset_v_1.md  gui_setup_scripts.txt  guichat.md  guichat1.md  guichat2.md  migration_scripts.py  parity_test_harness.py  pty_terminal_runner.py  pyproject.toml  requirements-dev.txt  requirements.txt  security_configuration.py
CLI_PY_GUI/gui_terminal/config/: default_config.yaml  security_policies.yaml
CLI_PY_GUI/gui_terminal/scripts/: install.py
CLI_PY_GUI/gui_terminal/src/gui_terminal/: __init__.py  main.py
CLI_PY_GUI/gui_terminal/src/gui_terminal/config/: __init__.py  settings.py
CLI_PY_GUI/gui_terminal/src/gui_terminal/core/: __init__.py  event_system.py  logging_config.py  pty_backend.py  terminal_widget.py
CLI_PY_GUI/gui_terminal/src/gui_terminal/integrations/: __init__.py  cost_tracker.py  platform_client.py
CLI_PY_GUI/gui_terminal/src/gui_terminal/plugins/: __init__.py  base_plugin.py  plugin_manager.py
CLI_PY_GUI/gui_terminal/src/gui_terminal/security/: __init__.py  policy_manager.py
CLI_PY_GUI/gui_terminal/src/gui_terminal/ui/: __init__.py  main_window.py  status_bar.py  toolbar.py
CLI_PY_GUI/gui_terminal/src/tests/: __init__.py
CLI_PY_GUI/gui_terminal/src/tests/unit/: test_pty_backend.py  test_security_policy.py
CODEX_IMPLEMENTATION/: README_CODEX_INSTRUCTIONS.md
Directory management system/: Directory Structure Optimization Framework.txt  MAPPING_GAP_ANALYSIS.md  MAPPING_GAP_IMPLEMENTATION_PLAN.md  Runtime File Clutter vs Performance and Auditability.txt  TEMPLATE_SSOT_Documentation-Master-Template.md  biggpropt_experiment.txt  generic instruction framework for directory operations.txt  watcher subsystem.md
EA-REG/: CLAUDE.md  baseline_scanner_spec.json  generate_three_artifact_catalogs.py  identifier_map.json  physical_id_config_schema.json  solution_spec.json  validate_three_artifact_alignment.py  validate_ui_catalog.py
EAFIX_auth_docs/: 0110000073260118_06_reentry_subsystem.md  Chat_EAFIX_SSOT_REGISTRY_SYSTEM_FINAL_MERGED_IMPLEMENTATION_PLAN_v2_0_0.json  Chat_EAFIX_SSOT_REGISTRY_SYSTEM_MASTER_IMPLEMENTATION_PLAN_v1_0_0.json  Claude_gen_atomic module catalog vNext.json  EAFIX Module Folder Naming and Migration Plan.txt  EAFIX REGISTRY AUTHORITY PARITY IMPLEMENTATION PLAN v1 0 0.json  EAFIX REGISTRY COMPLETION ROADMAP v1 0 0.json  EAFIX REGISTRY CONFLICT BURNDOWN IMPLEMENTATION PLAN v1 0 0.json  EAFIX SSOT UNIFIED DELIVERY PLAN v1 0 0.json  EAFIX module reconciliation worksheet.csv  EAFIX-Modular — End-to-End Module Map.txt  EAFIX_34_MODULE_REPOSITORY_MIGRATION_GAP_CLOSURE_PLAN_v1_0_0.json  EAFIX_ATOMIC_MANIFEST_POPULATION_FIX_PLAN_V1_0_0".txt  EAFIX_ATONIC_ End-to-End Trading Lifecycle Process.md  EAFIX_PROCESS_INFORMATION_CONSOLIDATION_SPEC_v1_0_0.md  EAFIX_PROPOSED_34_MODULE_FILE_TREE.md  EAFIX_REGISTRY_POST_MERGE_REMEDIATION_IMPLEMENTATION_PLAN_v1_0_0.json  EAFIX_SSOT_REGISTRY_DELIVERY_CHECKLIST.generated.md  EAFIX_SSOT_REGISTRY_DELIVERY_OBLIGATION_MATRIX.generated.json  EAFIX_SSOT_REGISTRY_DELIVERY_VERIFICATION_EVIDENCE_MANIFEST.json  EAFIX_SSOT_REGISTRY_DELIVERY_VERIFICATION_REPORT.json  EAFIX_SSOT_REGISTRY_DELIVERY_VERIFICATION_SPEC.schema.json  EAFIX_SSOT_REGISTRY_DELIVERY_VERIFICATION_SPEC_v1_0_0.json  HUEY_P_EA_ExecutionEngine_8.mql4  MT4_Bridge_Reference.docx  MT4_Python communication channels.txt  Missing:needed artifacts .txt  Mod_refactor_plan.txt  Simple Explanation of the Entire EAFIX : HUEY_P System.txt  U_module governance glossary.txt  atomic module decomposition decisions.json  atonic to canonical crosswalk.csv  authority_and_supersession_checklist.md  communication_channels.json  dependency_layers_parsed.json  doc_authority.json  documentation_cleanup_report.json  documentation_triage_matrix.json  eafix_atomic_manifest_population_map_v1_0_0.md  eafix_file_ownership_resolution_policy_v1_0_0.md  (+22 more)
P_GUI/: ExpiryZones.mq4  GUI structure.txt  RS1.md  (+16 more)
(+2161 files in other folders)
