[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "eafix-modular"
version = "1.0.0"
description = "Modularized EAFIX trading system with containerized microservices"
authors = ["Richard Wilks <richgwilks@gmail.com>"]
readme = "README.md"
packages = [
    { include = "data_ingestor", from = "services/data-ingestor/src" },
    { include = "indicator_engine", from = "services/indicator-engine/src" },
    { include = "signal_generator", from = "services/signal-generator/src" },
    { include = "risk_manager", from = "services/risk-manager/src" },
    { include = "execution_engine", from = "services/execution-engine/src" },
    { include = "calendar_ingestor", from = "services/calendar-ingestor/src" },
    { include = "reentry_matrix_svc", from = "services/reentry-matrix-svc/src" },
    { include = "reporter", from = "services/reporter/src" },
    { include = "gui_gateway", from = "services/gui-gateway/src" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
redis = "^5.0.1"
structlog = "^23.2.0"
prometheus-client = "^0.19.0"
asyncpg = "^0.29.0"
pandas = "^2.1.3"
numpy = "^1.25.2"
httpx = "^0.25.2"
pywin32 = {version = "^311", markers = "sys_platform == 'win32'"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
pre-commit = "^3.5.0"

[tool.poetry.group.security]
optional = true

[tool.poetry.group.security.dependencies]
bandit = {extras = ["toml"], version = "^1.7.5"}
safety = "^2.3.4"
semgrep = "^1.45.0"

[tool.pytest.ini_options]
testpaths = ["services/*/tests/unit", "services/*/tests/integration", "tests/e2e"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=services",
    "--cov-fail-under=80",           # Blocking coverage threshold
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:reports/coverage",
    "--cov-report=xml:reports/coverage.xml",
    "--cov-branch",                  # Branch coverage
    "--maxfail=10"                   # Stop after 10 failures
]

markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (moderate speed, external deps)",
    "e2e: End-to-end tests (slow, full system)",
    "security: Security-focused tests",
    "performance: Performance benchmarks"
]

# Critical path coverage - 100% required
[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/venv/*",
    "*/__pycache__/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError"
]

# Fail if critical modules below 80%
fail_under = 80
precision = 2
show_missing = true

[tool.coverage.html]
directory = "reports/coverage"

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
    # directories
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.nox
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["services"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["redis.*", "prometheus_client.*", "structlog.*"]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", "docs"]
skips = ["B101"]  # Skip assert_used_in_tests
severity_level = "medium"

[tool.bandit.assert_used]
skips = ["*/tests/*", "*/test_*.py"]